--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPU1TQcwNwRExlqE7yj89Oa",
+      "authorship_tag": "ABX9TyOGeJ8V7tLtoGooB8i0xgsM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3710,11 +3710,11 @@
         "print_pascal_triangle(pascal_triangle)\n"
       ],
       "metadata": {
-        "id": "7myQzSpJkA50",
-        "outputId": "067e0ccd-2b5c-4bd1-83fc-d5753ce4330c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7myQzSpJkA50",
+        "outputId": "067e0ccd-2b5c-4bd1-83fc-d5753ce4330c"
       },
       "execution_count": 1,
       "outputs": [
@@ -8792,11 +8792,11 @@
         "print(counts_elements)"
       ],
       "metadata": {
-        "id": "NQqKWOQ3n6Nl",
-        "outputId": "7da6a19a-9ad1-4c76-81f5-681218e344cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NQqKWOQ3n6Nl",
+        "outputId": "7da6a19a-9ad1-4c76-81f5-681218e344cd"
       },
       "execution_count": 11,
       "outputs": [
@@ -8820,11 +8820,11 @@
         "print(counts)"
       ],
       "metadata": {
-        "id": "dD6hC1PBp10t",
-        "outputId": "d6a10f04-3fc2-471b-82c3-97ef944f1c8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dD6hC1PBp10t",
+        "outputId": "d6a10f04-3fc2-471b-82c3-97ef944f1c8e"
       },
       "execution_count": 13,
       "outputs": [
@@ -8839,6 +8839,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Write a program to repeat each of the elements five times for a given array**"
+      ],
+      "metadata": {
+        "id": "W-5yP78K_tbM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "arr = np.array(['i', 'love', 'NumPy', 'AND', 'almabetter'], dtype=str)\n",
@@ -8847,11 +8856,11 @@
         "print(new)"
       ],
       "metadata": {
-        "id": "X1LKT_VjvzRX",
-        "outputId": "47a41b3b-d654-4ff3-923c-9af803b7d45f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X1LKT_VjvzRX",
+        "outputId": "47a41b3b-d654-4ff3-923c-9af803b7d45f"
       },
       "execution_count": 19,
       "outputs": [
@@ -8878,11 +8887,11 @@
         "print(new_w(arr))"
       ],
       "metadata": {
-        "id": "aDsrjOP6ygc3",
-        "outputId": "615b7030-bf29-4cb2-c81d-41e1b34502eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aDsrjOP6ygc3",
+        "outputId": "615b7030-bf29-4cb2-c81d-41e1b34502eb"
       },
       "execution_count": 28,
       "outputs": [
@@ -8896,6 +8905,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Write a program for inserting space between characters of all elements in a NumPy array.**"
+      ],
+      "metadata": {
+        "id": "ljdPY8Id_WfF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Create Sample NumPy Array\n",
@@ -8907,11 +8925,11 @@
         "print(r)"
       ],
       "metadata": {
-        "id": "lk1g8TAN4mDi",
-        "outputId": "cbad8e57-10d8-4d2c-e9b6-41e9c8a39cbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lk1g8TAN4mDi",
+        "outputId": "cbad8e57-10d8-4d2c-e9b6-41e9c8a39cbb"
       },
       "execution_count": 36,
       "outputs": [
@@ -8939,11 +8957,11 @@
         "print(new_w_(arr))"
       ],
       "metadata": {
-        "id": "9-912qXy2rc0",
-        "outputId": "82e73554-e252-4a3b-94d0-c744e2eed032",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9-912qXy2rc0",
+        "outputId": "82e73554-e252-4a3b-94d0-c744e2eed032"
       },
       "execution_count": 37,
       "outputs": [
