--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4rtq+rMIxpn6BAzXwI11H",
+      "authorship_tag": "ABX9TyMrhqSDm8uWaIxjjy3Ds5a7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3729,6 +3729,139 @@
             "      1 1       \n",
             "     1 2 1      \n",
             "    1 3 3 1     \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [1,2,3,4,4,3,2,1]\n",
+        "n=4\n",
+        "\n",
+        "def shuffle_array(nums,n):\n",
+        "  lst = []\n",
+        "  for i in range(n):\n",
+        "    lst.append(nums[i])\n",
+        "    lst.append(nums[i+n])\n",
+        "  return lst\n",
+        "print(shuffle_array(nums,n))\n"
+      ],
+      "metadata": {
+        "id": "R0yIITg8kHJL",
+        "outputId": "1cebe880-8741-4393-f078-206709c68b8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 2, 3, 3, 2, 4, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "accounts = [[1,2,3],[3,2,1]]\n",
+        "def total():\n",
+        "  new=[]\n",
+        "  for lst in accounts:\n",
+        "    new.append(sum(lst))\n",
+        "  return max(new)\n",
+        "\n",
+        "total()"
+      ],
+      "metadata": {
+        "id": "Rr91eOvlndjw",
+        "outputId": "9df672ae-cc9f-4552-c932-45f3a0ea4ab3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [1,15,6,3]\n",
+        "b=0\n",
+        "\n",
+        "for i in nums:\n",
+        "  for j in str(i):\n",
+        "    # print(j)\n",
+        "    b=b+int(j)\n",
+        "    print(b)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "Zt4QkY0zqlYe",
+        "outputId": "5b788891-18e1-4df5-d88d-d3d93f04b970",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "7\n",
+            "13\n",
+            "16\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [-1,1,2,3,1]\n",
+        "target = 2\n",
+        "count=0\n",
+        "for i in range(len(nums)):\n",
+        "  # print(i)\n",
+        "  for j in range(i+1,len(nums)):\n",
+        "    # print(j)\n",
+        "    if nums[i] +nums[j]<target:\n",
+        "      count+=1\n",
+        "\n",
+        "print(count)"
+      ],
+      "metadata": {
+        "id": "gHi9zXoGuHv7",
+        "outputId": "9373405b-ef2a-4b6c-e445-488477daae16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
           ]
         }
       ]
@@ -9009,7 +9142,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9040,7 +9173,7 @@
           "height": 125
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
