--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrhqSDm8uWaIxjjy3Ds5a7",
+      "authorship_tag": "ABX9TyPnyBNPa2mY6vHgKAVwoGeR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3754,7 +3754,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3784,7 +3784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3808,8 +3808,7 @@
         "  for j in str(i):\n",
         "    # print(j)\n",
         "    b=b+int(j)\n",
-        "    print(b)\n",
-        ""
+        "    print(b)\n"
       ],
       "metadata": {
         "id": "Zt4QkY0zqlYe",
@@ -3818,7 +3817,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3855,13 +3854,134 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [8,1,2,2,3]\n",
+        "c=0\n",
+        "new=[]\n",
+        "for i in range(len(nums)):\n",
+        "  for j in range(len(nums)):\n",
+        "    if nums[i]>nums[j]:\n",
+        "      c+=1\n",
+        "      new.append(c)\n",
+        "print(new)"
+      ],
+      "metadata": {
+        "id": "Xq3ah31zNJ3h",
+        "outputId": "38b346d9-66a8-4661-ee9a-f65a84aa6e6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [1,2,3,2]\n",
+        "dict_ ={}\n",
+        "s =0\n",
+        "for i in nums:\n",
+        "  if i in dict_:\n",
+        "    dict_[i]+=1\n",
+        "\n",
+        "print(dict_)"
+      ],
+      "metadata": {
+        "id": "ZJenuvo8eVi8",
+        "outputId": "a29a4606-4fcc-41f0-98e5-b70eaf95ab8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [0,2,1,5,3,4]\n",
+        "# [0,1,2,4,5,3]\n",
+        "new=[]\n",
+        "\n",
+        "for i in range(len(nums)):\n",
+        "  new.append(nums[nums[i]])\n",
+        "print(new)\n"
+      ],
+      "metadata": {
+        "id": "0kAH6PN7uBxb",
+        "outputId": "67e78f52-97d1-40b3-e78b-46b62dd23e17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 4, 5, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [2,5,1,3,4,7]\n",
+        "n = 3\n",
+        "# [2,3,5,4,1,7]\n",
+        "\n",
+        "new=[]\n",
+        "for i in range(0,n):\n",
+        "  new.append(nums[i])\n",
+        "  new.append(nums[i+n])\n",
+        "print(new)\n"
+      ],
+      "metadata": {
+        "id": "8bmOZfAAxNyl",
+        "outputId": "74c1af19-3e32-4e24-dd5f-ae25d29c4f90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 3, 5, 4, 1, 7]\n"
           ]
         }
       ]
