--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnyBNPa2mY6vHgKAVwoGeR",
+      "authorship_tag": "ABX9TyPEpI39Mj2KKdwdlrjBp4pk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "# **Python Coding**"
       ],
       "metadata": {
@@ -1024,18 +1025,17 @@
         "my_array = [10, 20, 30, 99]\n",
         "\n",
         "def largest_num():\n",
-        "  for num in my_array:\n",
         "    return max(my_array)\n",
         "print(largest_num())\n"
       ],
       "metadata": {
         "id": "Eupdycl89hop",
-        "outputId": "5d4672d3-fa78-4d52-816d-2a4715ec5c5d",
+        "outputId": "60decaff-658c-4431-d300-4d16b50346a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1052,18 +1052,17 @@
         "my_array = ['ankit' ,'amit' ,'sumt' ,'Abcdes']\n",
         "\n",
         "def largest_num():\n",
-        "  for num in my_array:\n",
         "    return max(my_array ,key=len)\n",
         "print(largest_num())"
       ],
       "metadata": {
         "id": "13TxxgjcQlHl",
-        "outputId": "de96bdd2-c078-4f66-bbfd-f3005bbb0357",
+        "outputId": "cd8ddf65-fdf9-46b3-88d7-e116665e2f54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,7 +1076,7 @@
     {
       "cell_type": "code",
       "source": [
-        "my_array = [10, 20, 30, 99]\n",
+        "my_array = [10, 20, 30,345, 99,46]\n",
         "largest_ = my_array[0]\n",
         "def largest_number():\n",
         "  largest_ = my_array[0]\n",
@@ -1091,18 +1090,18 @@
       ],
       "metadata": {
         "id": "hu6xAZYIIaPc",
-        "outputId": "fe889dfe-cd6b-4bda-aadf-39b7e48e5b15",
+        "outputId": "7164769d-bc9e-4c50-be4b-9974be850176",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "99\n"
+            "345\n"
           ]
         }
       ]
@@ -1174,27 +1173,28 @@
         "    return arr\n",
         "  first=arr[:k]\n",
         "  last = arr[k:]\n",
-        "  return last + first\n",
+        "  new=last+first\n",
+        "  return new\n",
         "final =(first_last(arr,k))\n",
         "print(\"initial array\",arr)\n",
         "print('Final Array',final)"
       ],
       "metadata": {
         "id": "08CnEFasNgfQ",
-        "outputId": "331346f6-40b9-4c4b-8361-d42867a1f737",
+        "outputId": "7b762eb7-98df-49ad-84da-b2b851de7e08",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "87\n",
+            "5\n",
             "initial array [0, 1, 2, 3, 4, 5, 6]\n",
-            "Final Array [0, 1, 2, 3, 4, 5, 6]\n"
+            "Final Array [5, 6, 0, 1, 2, 3, 4]\n"
           ]
         }
       ]
@@ -3885,7 +3885,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3915,7 +3915,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3944,7 +3944,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3975,7 +3975,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
