--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPg1VsmN/dTruRCL9LIGjpC",
+      "authorship_tag": "ABX9TyNK0n0hPqf+H2H2qKNVr9h/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9654,7 +9654,7 @@
       "metadata": {
         "id": "TD9GKO9EQF_S"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10003,7 +10003,7 @@
           "height": 143
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10293,7 +10293,7 @@
         "id": "mi-c9-PEmUqX",
         "outputId": "576d143a-11e4-4c18-d7de-44e78e4d9e33"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10591,7 +10591,7 @@
         "id": "hoZjV-b9mxD0",
         "outputId": "ed33042b-a314-4cac-fd36-61a2e855f1de"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10880,7 +10880,7 @@
         "id": "EHZv3gSknEV3",
         "outputId": "c15560b1-e16d-4d5b-cc9f-4630dedb66c8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11169,7 +11169,7 @@
         "id": "f2bFKwWapIn2",
         "outputId": "9458ffd7-cb0b-4703-fe24-79cd4939c69d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11473,7 +11473,7 @@
         "id": "3mwwbplVqphN",
         "outputId": "d4d8fc31-e224-486c-94c5-0f9f086aa04e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11501,7 +11501,7 @@
         "id": "4Y5hgMImsS6i",
         "outputId": "9c1da269-3540-4a51-fcff-9c6de2ff99aa"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11529,7 +11529,7 @@
         "id": "lo353loPsd9D",
         "outputId": "2eabf617-ef7b-4412-ae2f-7ab8e9c620d7"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11825,7 +11825,7 @@
         "id": "tM3FCVpRtPTM",
         "outputId": "e54c2278-4067-4b2d-95fc-e6601b796f39"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12236,7 +12236,7 @@
       "metadata": {
         "id": "OvoJ1raYwpYS"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12253,7 +12253,7 @@
         "id": "NFyBBCq7w0IC",
         "outputId": "ce90189e-5f6c-4c2e-e1cc-61c21a17c463"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12285,7 +12285,7 @@
         "id": "22xqGOyix_5O",
         "outputId": "c3285686-9398-4409-e51b-02bd3ce102e7"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12638,7 +12638,7 @@
         "id": "XTaKe5PYywpw",
         "outputId": "6fc37c45-c90e-4ddd-8b08-e2b3a44b123a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12991,7 +12991,7 @@
         "id": "7PnlkWCq08fL",
         "outputId": "272c7641-35c0-4230-b220-62a0bea03b7c"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13345,7 +13345,7 @@
         "id": "SFe_WUSO9sVD",
         "outputId": "8c2277bd-bf80-4f03-881e-214250cff1d0"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13645,7 +13645,7 @@
         "id": "WdDkHBIJ99ZK",
         "outputId": "17226775-67b1-44d4-fe02-d7adbea6d400"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14026,7 +14026,7 @@
           "height": 269
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14330,7 +14330,7 @@
           "height": 394
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14655,7 +14655,7 @@
           "height": 206
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14945,6 +14945,106 @@
           },
           "metadata": {},
           "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **LeetCode**"
+      ],
+      "metadata": {
+        "id": "NjXxC5hCXxyc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [0,2,1,5,3,4]    # Output: [0,1,2,4,5,3]\n",
+        "def array_per (nums):\n",
+        "  arr=[]\n",
+        "  for i in range(len(nums)):\n",
+        "    arr.append(nums[nums[i]])\n",
+        "  return arr\n",
+        "print(array_per(nums))\n"
+      ],
+      "metadata": {
+        "id": "DRgf1TQ5X2Rk",
+        "outputId": "8f59b7b3-a081-450a-ea90-594aef32253a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 4, 5, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "operations = [\"--X\",\"X++\",\"X++\"]\n",
+        "def new_operation(operations):\n",
+        "  for i in range(len(operations)):\n",
+        "    ans=0\n",
+        "    if (operations[i]==\"++X\" or operations[i]==\"X++\"):\n",
+        "      ans+=1\n",
+        "    else:ans-=1\n",
+        "  return ans\n",
+        "print(new_operation(operations))\n"
+      ],
+      "metadata": {
+        "id": "8lBlGpLUZA5V",
+        "outputId": "0ec092b2-e6b1-4862-f2dd-b4fa0aa8b996",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [1,2,3,1,1,3]\n",
+        "def new_name(nums):\n",
+        "  a=0\n",
+        "  for i in range(len(nums)):\n",
+        "    for j in range(len(nums)):\n",
+        "      if nums[i]==nums[j] and i!=j:\n",
+        "        a+=1\n",
+        "  return int(a/2)\n",
+        "print(new_name(nums))"
+      ],
+      "metadata": {
+        "id": "-bHfkzWHoluf",
+        "outputId": "04a391d4-80aa-4b2b-b276-ce084dcd5c65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
         }
       ]
     }
