--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNK0n0hPqf+H2H2qKNVr9h/",
+      "authorship_tag": "ABX9TyNRkbIGoZ+m4LF/r/4myte3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14975,7 +14975,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15006,7 +15006,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15037,7 +15037,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15045,6 +15045,46 @@
           "text": [
             "4\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seats = [3,1,5]\n",
+        "students = [2,7,4]\n",
+        "def total_moves(seats,students):\n",
+        "\n",
+        "    # sorting both array\n",
+        "        seats.sort()\n",
+        "        students.sort()\n",
+        "    # initiate moves\n",
+        "        moves=0\n",
+        "    # Calculate total num of moves\n",
+        "        for i in range (len(seats)):\n",
+        "            moves+=abs(seats[i]-students[i])\n",
+        "        return moves\n",
+        "\n",
+        "total_moves(seats,students)"
+      ],
+      "metadata": {
+        "id": "pukF2aOmZ1SD",
+        "outputId": "ba68b238-64f6-436b-a4cf-eadf9a4ca868",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     }
