--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRkbIGoZ+m4LF/r/4myte3",
+      "authorship_tag": "ABX9TyP1u2J2/xheccNkl4Z/adfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15074,7 +15074,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15085,6 +15085,41 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = [\"Mary\",\"John\",\"Emma\"]\n",
+        "heights = [180,165,170]\n",
+        "def sort_people(names,heights):\n",
+        "  arr=[]\n",
+        "  for v1,v2 in zip(names,heights):\n",
+        "    obj=(v1,v2)\n",
+        "    arr.append(obj)\n",
+        "    arr.sort(reverse=True)\n",
+        "  return [item[0] for item in arr]\n",
+        "sort_people(names,heights)"
+      ],
+      "metadata": {
+        "id": "mhrTI9R8chqq",
+        "outputId": "f3d178f1-7fbc-4559-c7b9-26add48e06e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Mary', 'John', 'Emma']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
         }
       ]
     }
