--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1u2J2/xheccNkl4Z/adfb",
+      "authorship_tag": "ABX9TyN2xVtNNerHEUOt2H9gP0KD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14951,6 +14951,160 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **Patterns Questions**"
+      ],
+      "metadata": {
+        "id": "7Aqtc3fotv_I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Right angle pattern\n",
+        "rows = int(input('please enter the number \\n'))\n",
+        "for row in range(1,rows+1):\n",
+        "  for column in range(1,row+1):\n",
+        "    print('*',end=' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "TsJXoAqVtvKi",
+        "outputId": "bb3ef297-37c3-4058-f001-0e39eb2c19d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter the number \n",
+            "5\n",
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rows = int(input('please enter the number \\n'))\n",
+        "k=1\n",
+        "for i in range(1,rows+1):\n",
+        "  for j in range(1,k+1):\n",
+        "    print('*',end=' ')\n",
+        "  k+=2\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "jZULV7V3uQ1-",
+        "outputId": "82b13f05-6620-4c39-e942-b7fa4b9fa74d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter the number \n",
+            "5\n",
+            "* \n",
+            "* * * \n",
+            "* * * * * \n",
+            "* * * * * * * \n",
+            "* * * * * * * * * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pyramid pattern\n",
+        "rows = int(input('please enter the number \\n'))\n",
+        "for i in range(0,rows):\n",
+        "    for j in range(0,rows-i-1):\n",
+        "        print(end=' ')\n",
+        "    for j in range(1,i+1):\n",
+        "        print('*',end=' ')\n",
+        "    print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AqhKahn522Hx",
+        "outputId": "6f9b701d-90a8-4986-ea38-a7dd3691ddaf"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter the number \n",
+            "7\n",
+            "      \n",
+            "     * \n",
+            "    * * \n",
+            "   * * * \n",
+            "  * * * * \n",
+            " * * * * * \n",
+            "* * * * * * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Reverse pyramid\n",
+        "rows = int(input('Please enter the number of rows: \\n'))\n",
+        "for i in range(rows, 0, -1):\n",
+        "    for j in range(rows - i):\n",
+        "        print(end=' ')\n",
+        "    for j in range(0, i):\n",
+        "        print('*', end=' ')\n",
+        "    print()\n"
+      ],
+      "metadata": {
+        "id": "x313iXF73q9b",
+        "outputId": "d2bc7633-e923-48af-a16e-969756711803",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter the number of rows: \n",
+            "7\n",
+            "* * * * * * * \n",
+            " * * * * * * \n",
+            "  * * * * * \n",
+            "   * * * * \n",
+            "    * * * \n",
+            "     * * \n",
+            "      * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **LeetCode**"
       ],
       "metadata": {
@@ -15109,7 +15263,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15120,6 +15274,134 @@
           },
           "metadata": {},
           "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1496\n",
+        "paths = [[\"London\",\"New York\"],[\"New York\",\"Lima\"],[\"Lima\",\"Sao Paulo\"]]\n",
+        "\n",
+        "def destination_path(paths):\n",
+        "  for group in paths:\n",
+        "    new=group[0]\n",
+        "    for city in group:\n",
+        "      if city not in new:\n",
+        "        final=city\n",
+        "  return final\n",
+        "destination_path(paths)"
+      ],
+      "metadata": {
+        "id": "UfDg-URChzVx",
+        "outputId": "b639c0fa-7d6d-427d-d5e5-3ba45d171912",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Sao Paulo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "paths = [[\"London\",\"New York\"],[\"New York\",\"Lima\"],[\"Lima\",\"Sao Paulo\"]]\n",
+        "def path_find(paths):\n",
+        "  first=[x[0] for x in paths]\n",
+        "  second =[x[1] for x in paths]\n",
+        "  for s in second:\n",
+        "    if s not in first:\n",
+        "      return s\n",
+        "path_find(paths)"
+      ],
+      "metadata": {
+        "id": "fQGpl31Tjf4Y",
+        "outputId": "70c41ea2-8fcc-4c12-84b0-775d4a563f92",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Sao Paulo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = [\"h\",\"e\",\"l\",\"l\",\"o\"]\n",
+        "s[::-1]"
+      ],
+      "metadata": {
+        "id": "M_p43Yw1CkqJ",
+        "outputId": "681720a3-6b27-40c1-8935-e2a09ad1e017",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['o', 'l', 'l', 'e', 'h']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word1 = \"abc\"\n",
+        "word2 = \"pqr\"\n"
+      ],
+      "metadata": {
+        "id": "J8ARvWxWIeM1",
+        "outputId": "de22f43e-2d60-43b3-c43f-cc3b1ea16268",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['abc']\n"
+          ]
         }
       ]
     }
